--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,19 +5,19 @@
   <app-toolbar [inputSideNav]="sidenav"></app-toolbar>
   <div class="content">
     <div class="container">
-<header focusOnNavigation class="docs-header-background" aria-label="Get started" id="homepage-header">
-  <div class="docs-header-section">
-    <div class="docs-header-headline">
-      <h1 class="mat-h1">Angular Material</h1>
-      <h2> Material Design components for Angular</h2>
+      <header focusOnNavigation class="docs-header-background" aria-label="Get started" id="homepage-header">
+        <div class="docs-header-section">
+          <div class="docs-header-headline">
+            <h1 class="mat-h1">Angular Material</h1>
+            <h2> Material Design components for Angular</h2>
+          </div>
+          <div class="docs-header-start">
+            <a mat-raised-button color="primary" routerLink="/guide/getting-started">Get started</a>
+          </div>
+        </div>
+      </header>
     </div>
-    <div class="docs-header-start">
-      <a mat-raised-button class="docs-button" routerLink="/guide/getting-started">Get started</a>
-    </div>
-  </div>
-</header>
-    </div>
-    
+
     <router-outlet></router-outlet>
   </div>
 </mat-sidenav-container>
