--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -8,11 +8,11 @@
             <span style="font-weight:lighter;font-size: larger;">angular material boilerplate</span>
         </a>
         <span class="nav-spacer"></span>
-        <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+        <button mat-icon-button>
             <mat-icon>favorite</mat-icon>
         </button>
-        <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-            <mat-icon>person</mat-icon>
-        </button>
+        <a mat-icon-button matTooltip="Fork this repository!" href="https://github.com/fullstackhero/angular-material-boilerplate/" target="_blank">
+            <mat-icon class="fab fa-github"></mat-icon>
+        </a>
     </mat-toolbar-row>
 </mat-toolbar>
