--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -8,6 +8,7 @@
             <span style="font-weight:lighter;font-size: larger;">angular material boilerplate</span>
         </a>
         <span class="nav-spacer"></span>
+        <a mat-raised-button color="secondary" href="https://www.buymeacoffee.com/codewithmukesh" target="_blank">Support!</a>
         <button mat-icon-button>
             <mat-icon>favorite</mat-icon>
         </button>
