--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -8,12 +8,16 @@
             <span style="font-weight:lighter;font-size: larger;">angular material boilerplate</span>
         </a>
         <span class="nav-spacer"></span>
-        <a mat-raised-button color="secondary" href="https://www.buymeacoffee.com/codewithmukesh" target="_blank">Support!</a>
-        <button mat-icon-button>
-            <mat-icon>favorite</mat-icon>
-        </button>
-        <a mat-icon-button matTooltip="Fork this repository!" href="https://github.com/fullstackhero/angular-material-boilerplate/" target="_blank">
+        <a mat-raised-button color="accent" href="https://www.buymeacoffee.com/codewithmukesh"
+            target="_blank">Support</a>
+
+        <a mat-icon-button matTooltip="Fork this repository!"
+            href="https://github.com/fullstackhero/angular-material-boilerplate/" target="_blank">
             <mat-icon class="fab fa-github"></mat-icon>
         </a>
+        <a mat-icon-button (click)="toggleDarkMode()">
+            <mat-icon>brightness_5</mat-icon>
+        </a>
+        
     </mat-toolbar-row>
 </mat-toolbar>
