dark mode styling

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,8 +21,8 @@ $app-theme:   mat-light-theme((
 
 
 // Define an alternate dark theme.
-$dark-primary: mat-palette($mat-indigo);
-$dark-accent:   mat-palette($mat-pink, A200, A100, A400);
+$dark-primary: mat-palette($mat-blue-grey);
+$dark-accent:  mat-palette($mat-pink, A200, A100, A400);
 $dark-warn:    mat-palette($mat-deep-orange);
 $dark-theme:   mat-dark-theme((
   color: (
