--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -1,32 +1,40 @@
-<mat-nav-list>
-    <div
-        style="font-weight: lighter;padding-left: 10px;margin: 0px!important;margin-bottom: 10px!important;margin-top: 10px!important;color: grey;font-size:larger;">
-        Management</div>
-    <a mat-list-item routerLink="/">
-        <mat-icon style="padding-right: 10px;">home</mat-icon> Home
-    </a>
-    <a mat-list-item routerLink="/">
-        <mat-icon style="padding-right: 10px;">home</mat-icon> Home
-    </a>
-    <a mat-list-item routerLink="/">
-        <mat-icon style="padding-right: 10px;">home</mat-icon> Home
-    </a>
-    <a mat-list-item routerLink="/">
-        <mat-icon style="padding-right: 10px;">home</mat-icon> Home
-    </a>
-    <div
-        style="font-weight: lighter;padding-left: 10px;margin: 0px!important;margin-bottom: 10px!important;margin-top: 10px!important;color: grey;font-size:larger;">
-        Management</div>
-    <a mat-list-item routerLink="/">
-        <mat-icon style="padding-right: 10px;">home</mat-icon> Home
-    </a>
-    <a mat-list-item routerLink="/">
-        <mat-icon style="padding-right: 10px;">home</mat-icon> Home
-    </a>
-    <a mat-list-item routerLink="/">
-        <mat-icon style="padding-right: 10px;">home</mat-icon> Home
-    </a>
-    <a mat-list-item routerLink="/">
-        <mat-icon style="padding-right: 10px;">home</mat-icon> Home
-    </a>
+<mat-nav-list style="padding-top: 0px;">
+    <mat-card class="user-card mat-elevation-z0">
+        <mat-card-header>
+            <div mat-card-avatar class="example-header-image"></div>
+            <mat-card-title>Mukesh Murugan</mat-card-title>
+            <mat-card-subtitle>mukesh@fullstackhero.com</mat-card-subtitle>
+        </mat-card-header>
+    </mat-card>
+    <hr>
+    <div style="margin-top: 20px">
+        <div class="nav-subheading">Management</div>
+        <a mat-list-item routerLink="/">
+            <mat-icon style="padding-right: 10px;">home</mat-icon> Home
+        </a>
+        <a mat-list-item routerLink="/">
+            <mat-icon style="padding-right: 10px;">home</mat-icon> Home
+        </a>
+        <a mat-list-item routerLink="/">
+            <mat-icon style="padding-right: 10px;">home</mat-icon> Home
+        </a>
+        <a mat-list-item routerLink="/">
+            <mat-icon style="padding-right: 10px;">home</mat-icon> Home
+        </a>
+        <div class="nav-subheading">
+            Management</div>
+        <a mat-list-item routerLink="/">
+            <mat-icon style="padding-right: 10px;">home</mat-icon> Home
+        </a>
+        <a mat-list-item routerLink="/">
+            <mat-icon style="padding-right: 10px;">home</mat-icon> Home
+        </a>
+        <a mat-list-item routerLink="/">
+            <mat-icon style="padding-right: 10px;">home</mat-icon> Home
+        </a>
+        <a mat-list-item routerLink="/">
+            <mat-icon style="padding-right: 10px;">home</mat-icon> Home
+        </a>
+    </div>
+    
 </mat-nav-list>
