dynamic dark mode icon

--- a/src/app/layout/toolbar/toolbar.component.html
+++ b/src/app/layout/toolbar/toolbar.component.html
@@ -16,7 +16,7 @@
             <mat-icon class="fab fa-github"></mat-icon>
         </a>
         <a mat-icon-button (click)="toggleDarkMode()">
-            <mat-icon>brightness_5</mat-icon>
+            <mat-icon>{{darkModeIcon}}</mat-icon>
         </a>
         
     </mat-toolbar-row>
