--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,3 +66,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 {
   background-color: #212121!important;
 }
+.dark-theme .mat-drawer-backdrop.mat-drawer-shown {
+    background-color: rgb(0 0 0 / 82%);
+}
